--- a/index.html
+++ b/index.html
@@ -1,11 +1,127 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Document</title>
-</head>
-<body>
-      
-</body>
-</html>
+<!DOCTYPE HTML>
+<!--
+	Strata by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Terrence Johnson</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body class="is-preload">
+
+		<!-- Header -->
+			<header id="header">
+				<div class="inner">
+					<a href="#" class="image avatar"><img src="images/Terrence.jpg" alt="" /></a>
+					<h1><strong><a href="https://www.linkedin.com/in/terrence-c-johnson2/">Terrence Johnson</a></strong></h1>
+				</div>
+				
+			</header>
+
+		<!-- Main -->
+			<div id="main">
+				<!-- One -->
+					<section id="one">
+						<header class="major">
+							<h2>SOFTWARE ENGINEER | WEB DESIGNER</h2>
+						</header>
+						<p>I am a passionate and skilled web developer eager to learn new technologies and design trends that can be used to improve the world around me. Leader with experience managing cross-functional teams. These leadership skills and attention to detail complement my strong web development skills in building impactful web and mobile applications.</p>
+						<ul class="actions">
+							<li><a href="https://www.linkedin.com/in/terrence-c-johnson2/" class="button">Get In Touch</a></li>
+						</ul>
+					</section>
+
+				<!-- Two -->
+					<section id="two">
+						<h2>Projects</h2>
+						<div class="row">
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://mern-destinations.herokuapp.com/"><img src="images/thumbs/01.jpg"/></a>
+								<h3>Dream Destinations</h3>
+								<p>Dream Destinations is a travel destinations bucket list application. You can add travel spots you'd like to go to using the name, description and image of the destination. You can then add your favorites to a seperate list to keep them handy.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://tcj-opencourt.herokuapp.com/"><img src="images/thumbs/02.jpg" alt="" /></a>
+								<h3>openCourt</h3>
+								<p>openCourt is a full-stack application built using Node.js, Mongoose, Express, EJS and EJS partials accessible to the public via Heroku.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://tcjohnson1.github.io/New-Repo/"><img src="images/thumbs/03.jpg" alt="" /></a>
+								<h3>ConnectFour</h3>
+								<p>Connect Four was built Using HTML5, CSS3, JavaScript and Jquery.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/04.jpg"><img src="images/thumbs/04.jpg" alt="" /></a>
+								<h3>Name Generator</h3>
+								<p>A simple name generator buitl using React, Handlebars and JavaScript.</p>
+							</article>
+						</div>
+						<ul class="actions">
+							<li><a href="https://github.com/TCJohnson1" class="button">More Projects</a></li>
+						</ul>
+					</section>
+
+				<!-- Three -->
+					<section id="three">
+						<div>
+							<h2>Skills</h2>
+							<p>HTML5 | CSS3 | Javascript | Python | React | | Node.js |Github | JIRA |Piccolo Auto Pilot | FalconView | Zeus | JQuery |
+							<br/>BCrypt | Active Record | Heroku | Axios | Responsive Design | Command Lines | UX (User Experience) | EJS | Passport.js</p>
+						</div>
+						<h2>Expreience</h2>
+						<div class="row">
+							<h4>General Assembly-Software Engineering Immersive</h4>
+							<p>April 2017 - September 2020</p>
+						<ul>
+							<li>Full-time Software Engineering Immersive program which includes over 480 hours of professional training throughout a course of 12 weeks consisting of 4 different units.</li>
+							<li>Created a web application after each unit using the technologies learned to demonstrate mastery and understanding.</li>
+							<li>The different technologies learned during the 12 week  program include HTML, CSS, JavaScript, jQuery, Express, Node.js, MongoDB, Mongoose, SQL, PostgreSQL, Python, Flask, Django and Algorithms.</li>
+						</ul>
+							<h4>JE Compliance Services, Inc-Field Services Manager</h4>
+							<p>April 2017 - September 2020</p>
+						<ul>
+							<li>Delivered on-site project management for international field projects for storage, packaging, and exportation of hazardous materials.</li>
+							<li>Provided stateside port inspections of imports of hazardous material destined for recycling. Ensuring shipments met IMDG and DOT labeling, packaging, and shipping requirements for universal waste and hazardous material.</li>
+							<li>Expanded upon role and learned additional skills as an instructor for client training programs dealing with the safe handling, packaging, and disposal of hazardous material.</li>
+						</ul>
+
+						<h2>Education</h2>
+						<div class="row">
+							<h4>General Assembly-Software Engineering Certificate</h4>
+							<p>September 2020 - December 2020</p>
+							<h4>Saint Edward's University- BA Computer Science</h4>
+							<p>September 2014 - May 2018</p>
+						</div>
+						</div>
+					</section>
+				</div>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<div class="inner">
+							<ul class="icons">
+								<li><a href="https://www.linkedin.com/in/terrence-c-johnson2/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/TCJohnson1" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="emailto: terrence.c.johnson2@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="tel:502-554-7122" class="icon solid fa-mobile-alt"><span class="label">Phone</span></a></li>
+							</ul>
+							<ul class="copyright">
+								<li>&copy; Terrence Johnson. All rights reserved 2020.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							</ul>
+						</div>
+					</footer>
+		
+				<!-- Scripts -->
+					<script src="assets/js/jquery.min.js"></script>
+					<script src="assets/js/jquery.poptrox.min.js"></script>
+					<script src="assets/js/browser.min.js"></script>
+					<script src="assets/js/breakpoints.min.js"></script>
+					<script src="assets/js/util.js"></script>
+					<script src="assets/js/main.js"></script>
+		
+			</body>
+		</html>
