Updated project images

--- a/index.html
+++ b/index.html
@@ -40,24 +40,29 @@
 						<h2>Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://mern-destinations.herokuapp.com/"><img src="images/thumbs/01.jpg"/></a>
+								<a href="https://tcj-passwordpro.herokuapp.com/"><img  class="pImage"src="images/pro.jpg" alt="PasswordPro"/></a>
+								<h3>PasswordPro</h3>
+								<p>PasswordPro was created as a capstone project for General Assembly's Software Engineering Immersive program. PasswordPro is a fullstack password management application created using Postgresql, Express, React and Nodejs.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://mern-destinations.herokuapp.com/"><img class="pImage" src="images/dd.jpg" alt="Dream Destinations"/></a>
 								<h3>Dream Destinations</h3>
 								<p>Dream Destinations is a travel destinations bucket list application. You can add travel spots you'd like to go to using the name, description and image of the destination. You can then add your favorites to a seperate list to keep them handy.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://tcj-opencourt.herokuapp.com/"><img src="images/thumbs/02.jpg" alt="" /></a>
+								<a href="https://tcj-opencourt.herokuapp.com/"><img  class="pImage" src="images/oc.jpg" alt="openCourt" /></a>
 								<h3>openCourt</h3>
 								<p>openCourt is a full-stack application built using Node.js, Mongoose, Express, EJS and EJS partials accessible to the public via Heroku.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://tcjohnson1.github.io/New-Repo/"><img src="images/thumbs/03.jpg" alt="" /></a>
+								<a href="https://tcjohnson1.github.io/New-Repo/"><img  class="pImage"src="images/c4.jpg" alt="ConnectFour" /></a>
 								<h3>ConnectFour</h3>
 								<p>Connect Four was built Using HTML5, CSS3, JavaScript and Jquery.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg"><img src="images/thumbs/04.jpg" alt="" /></a>
+								<a href="images/fulls/04.jpg"><img class="pImage" src="images/thumbs/04.jpg" alt="" /></a>
 								<h3>Name Generator</h3>
-								<p>A simple name generator buitl using React, Handlebars and JavaScript.</p>
+								<p>A simple name generator built using React, Handlebars and JavaScript.</p>
 							</article>
 						</div>
 						<ul class="actions">
@@ -69,8 +74,9 @@
 					<section id="three">
 						<div>
 							<h2>Skills</h2>
-							<p>HTML5 | CSS3 | Javascript | Python | React | | Node.js |Github | JIRA |Piccolo Auto Pilot | FalconView | Zeus | JQuery |
-							<br/>BCrypt | Active Record | Heroku | Axios | Responsive Design | Command Lines | UX (User Experience) | EJS | Passport.js</p>
+							<p>HTML5 <i class="fab fa-html5"></i> | CSS3 <i class="fab fa-css3-alt"></i> | Javascript <i class="fab fa-js-square"></i> | Python <i class="fab fa-python"></i> | React <i class="fab fa-react"></i> | Node.js <i class="fab fa-node-js"></i> | Github <i class="fab fa-github"></i>| Git <i class="fab fa-git-alt"></i> | 
+							<br/> JQuery | PostgreSQL | BCrypt | Active Record | Heroku | Axios | Responsive Design | SQL | 
+							<br/> MongoDB | VSCode | Command Lines | UX (User Experience) | EJS | Passport.js | Postman |</p>
 						</div>
 						<h2>Expreience</h2>
 						<div class="row">
