--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/Terrence.jpg" alt="" /></a>
-					<h1><strong><a href="https://www.linkedin.com/in/terrence-c-johnson2/">Terrence Johnson</a></strong></h1>
+					<a class="image avatar"><img src="images/Terrence.jpg" alt="" /></a>
+					<h1><strong><a href="https://www.linkedin.com/in/terrence-c-johnson2/">Terrence Johnson</a></strong>
+					</h1>
+					<h1>
+					<a href="mailto:terrence.c.johnson2@gmail.com" class="icon solid fa-envelope"> terrence.c.johnson2@gmail.com</a>
+					</h1>
 				</div>
 				
 			</header>
@@ -112,7 +116,7 @@
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/terrence-c-johnson2/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/TCJohnson1" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="emailto: terrence.c.johnson2@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="mailto:terrence.c.johnson2@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 								<li><a href="tel:502-554-7122" class="icon solid fa-mobile-alt"><span class="label">Phone</span></a></li>
 							</ul>
 							<ul class="copyright">
