--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<h1><strong><a href="https://www.linkedin.com/in/terrence-c-johnson2/">Terrence Johnson</a></strong>
 					</h1>
 					<h1>
-					<a href="mailto:terrence.c.johnson2@gmail.com" class="icon solid fa-envelope"> terrence.c.johnson2@gmail.com</a>
+					<a href="mailto:terrence.c.johnson2@gmail.com" class=""></a>
 					</h1>
 				</div>
 				
