--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a class="image avatar"><img src="images/Terrence.JPG" alt="" /></a>
+					<a class="image avatar"><img src="images/Profpic.JPG" alt="" /></a>
 					<h1><strong><a href="https://www.linkedin.com/in/terrence-c-johnson2/">Terrence Johnson</a></strong>
 					</h1>
 					<h1>
