--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>SOFTWARE ENGINEER | WEB DESIGNER</h2>
+							<h2>SOFTWARE ENGINEER | FRONT-END DEVELOPER</h2>
 						</header>
 						<p>I am a passionate and skilled web developer eager to learn new technologies and design trends that can be used to improve the world around me. Leader with experience managing cross-functional teams. These leadership skills and attention to detail complement my strong web development skills in building impactful web and mobile applications.</p>
 						<ul class="actions">
