updated get in touch link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						</header>
 						<p>I am a passionate and skilled web developer eager to learn new technologies and design trends that can be used to improve the world around me. Leader with experience managing cross-functional teams. These leadership skills and attention to detail complement my strong web development skills in building impactful web and mobile applications.</p>
 						<ul class="actions">
-							<li><a href="https://www.linkedin.com/in/terrence-c-johnson2/" class="button">Get In Touch</a></li>
+							<li><a href="mailto:terrence.c.johnson2@gmail.com" class="button">Get In Touch</a></li>
 						</ul>
 					</section>
 
